<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_myhome"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_mysearch"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/ic_mycart"
        android:title="@string/title_Cart" />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_myuser"
        android:title="@string/title_profile" />


</menu>