<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pkasemer.spacelounge.Fragments.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.pkasemer.spacelounge.Fragments.Cart"
        android:label="@string/title_Cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.pkasemer.spacelounge.Fragments.Search"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.pkasemer.spacelounge.Fragments.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>